<resources>
    <string name="gesture_app_name">Gesture</string>
    <string name="gesture_app_name_long">Scene - Gesture</string>
    <string name="accessibility_keyevent_description">
        开启此辅助服务即可体验屏幕边缘手，如需个性化手势功能，请点击界面上的设置按钮。
    </string>
    <string name="enable_service">启用手势导航 </string>
    <string name="hide_start_icon">隐藏启动图标 </string>
    <string name="hide_start_icon_desc">打开此开关后，本应用将从桌面隐藏，如果需要再恢复请到辅助服务界面，选中本应用进行操作</string>
    <string name="action_config_changed">com.omarea.gesture.ConfigChanged</string>
    <string name="app_switch_changed">com.omarea.gesture.AppSwitchChanged</string>
    <string name="action_service_disable">com.omarea.gesture.ServiceDisable</string>
    <string name="effect_color_picker">手势动效颜色</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="use_long_press">改为长按</string>
    <string name="handler_picker">选择动作响应</string>
    <string name="please_repeat">请重复手势~</string>
    <string name="service_active_desc">请手动去系统的“设置”-“无障碍”中激活</string>
    <string name="back_hide_task">如需从最近任务列表隐藏本应用，请“按返回键”关闭此界面~</string>
    <string name="rotate_tips">旋转屏幕，可查看横屏状态下的手势热区</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_fail">复制失败</string>
    <string name="ios_bar">小白条手势</string>
    <string name="side_bottom">底边手势</string>
    <string name="side_right">右边手势</string>
    <string name="three_section">三段手势</string>
    <string name="side_left">左边手势</string>
    <string name="edge_action">行为</string>
    <string name="slide_hover">滑动悬停</string>
    <string name="quick_slide">快速滑动</string>
    <string name="side_hot_area_width">侧边热区宽度</string>
    <string name="bottom_hot_area_height">热区高度</string>
    <string name="bottom_hot_area_width">热区宽度</string>
    <string name="hot_area_desc">注意：用于手势操作的热区会阻挡操作，在确保手势操作灵敏的情况下，尽量不要调太大！</string>
    <string name="portrait">竖屏</string>
    <string name="landscape">横屏</string>
    <string name="samsung_optimize">禁用OneUI手势</string>
    <string name="samsung_optimize_desc">激活手势功能时，自动禁用系统的手势。会导致底部区域偶尔不能点击，需要重新开关屏幕。如果经常出现问题，请禁用本选项</string>
    <string name="samsung_guide_desc">运行OneUI的三星手机，可通过USB调试执行以下代码，并重启本应用。软件会帮你自动禁用系统手势~</string>
    <string name="overscan_guide_desc">通过USB调试执行以下代码，并重启本应用。软件会帮你自动禁用系统手势~</string>
    <string name="animation_mode">动画模式</string>
    <string name="animation_mode_default">默认动画</string>
    <string name="animation_mode_basic">基本动画</string>
    <string name="animation_mode_custom">定制动画</string>
    <string name="animation_mode_desc">使用非默认的动画模式，需要授权本应用“后台运行”、“后台弹出界面”等权限，否则可能操作无反应</string>
    <string name="game_optimization">游戏防误触</string>
    <string name="game_optimization_desc">横屏时降低小白条高度；其它边缘手势则需要重复手势以确认</string>
    <string name="root_get_recents">ROOT增强</string>
    <string name="root_get_recents_desc">使用ROOT权限检查后台状态，避免使用上一个/下一个应用操作时，打开已经关闭的应用（会降低响应速度）</string>
    <string name="no_root">未能获得ROOT权限</string>
    <string name="need_root_mode">请先开启“ROOT增强”选项！</string>
    <string name="simple_gesture">简易手势</string>
    <string name="white_bar_gesture">小白条手势</string>
    <string name="three_section_gesture">底边三段式</string>
    <string name="other_settings">其它设置</string>
    <string name="basic_settings">基础设置</string>
    <string name="custom_shell_hint">输入自定义的脚本内容，最多可输入1024个字符。 如需执行大量脚本代码，请自行存储为文件，并通过本应用调用！</string>
    <string name="custom_shell">自定义脚本</string>
    <string name="custom_app">自定义应用</string>
    <string name="exclude_app">排除应用</string>
    <string name="faq_delay_5">疑：用Home键回到桌面后，通过手势切换应用会延迟 5 秒\n答：这是Google对第三方后台应用的限制无法规避，可尝试将动画模式换成“定制动画”</string>
    <string name="faq_no_response">疑：应用切换手势没反应\n答：例如MIUI，需要授予“后台弹出界面”权限才能正常使用，其它系统类似</string>
    <string name="faq_restart_task">疑：通过手势切换应用会重新打开关闭的应用\n答：系统不让第三方程序获取应用后台状态，如果你已经ROOT，可尝试打开“ROOT增强”选项</string>
    <string name="faq_slow">疑：感觉手势响应有延迟\n答：因为分配给后台程序的CPU资源较少，如果你有ROOT权限，可尝试复制本程序到System目录</string>
    <string name="faq_close">疑：手机重启后不会自动自动开启手势，或者经常自动关闭\n答：检查系统的 自启动管理、后台检查、内存管理、省电优化、游戏加速 等功能，将应用添加到白名单</string>
    <string name="faq_animation">疑：使用定制动画时“返回桌面”不彻底\n答：因为的确不是模拟Home键点击，而是直接打开了桌面，当然也是为了规避常见问题第一条</string>
    <string name="coming_soon">该功能还未完成，敬请期待！</string>
    <string name="add">添加</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="quick_question">\n单击全屏打开应用\n长按窗口化打开应用\n窗口化仅支持部分系统</string>
    <string name="app_switch_exclusive">跳过切换</string>
    <string name="app_switch_exclusive_desc">避免通过 上个应用/下个应用 手势切换到这些应用</string>
    <string name="please_press_icon">用力按压下方图标设置力度</string>
    <string name="pressure_desc">如果使用不同力度按压，数值均不变化\n表示设备并不支持压感</string>
    <string name="pressure_invalid">压感数值无效，已关闭压感手势</string>
    <string name="pressure_invalid_2">压感数值无效</string>
    <string name="pressure_config">设置压感力度</string>
    <string name="pressure_config_desc">设置小白条按压手势触发力度，但并非所有设备都支持压感</string>

    <string-array name="app_switch_black_list">
        <item>android</item>
        <item>com.android.systemui</item>
        <item>com.miui.home</item>
        <item>com.miui.freeform</item>
        <item>com.miui.touchassistant</item>
        <item>com.miui.contentextension</item>
        <item>com.miui.systemAdSolution</item>
        <item>com.miui.securitycenter</item>
        <item>com.omarea.vtools</item>
        <item>com.omarea.filter</item>
        <item>com.omarea.gesture</item>
        <item>com.zbar.lib</item>
        <item>eu.chainfire.supersu</item>
        <item>dev.nick.app.screencast</item>
        <item>eu.chainfire.perfmon</item>
        <item>com.c4x.roundcorner</item>
        <item>com.sohu.inputmethod.sogou.xiaomi</item>
        <item>com.sohu.inputmethod.sogou</item>
        <item>com.tencent.gamehelper.smoba</item>
        <item>com.miui.systemadsolution</item>
        <item>com.waterdaaan.cpufloat</item>
        <item>com.miui.contentextension</item>
        <item>com.miui.systemAdSolution</item>
        <item>com.sec.app.screenrecorder</item>
        <item>com.cyngn.screencast</item>
        <item>com.lbe.security.miui</item>
        <item>com.bst.airmessage</item>
        <item>com.gamebench.metricscollector</item>
        <item>com.samsung.android.game.gametools</item>
        <item>com.samsung.android.app.cocktailbarservice</item>
        <item>com.samsung.android.app.assistantmenu</item>
        <item>com.samsung.android.app.aodservice</item>
        <item>com.samsung.android.MtpApplication</item>
        <item>com.android.vpndialogs</item>
        <item>com.android.documentsui</item>
        <item>com.android.wallpapercropper</item>
    </string-array>
</resources>
