<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/other_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/other_settings"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/animation_mode" />

                    <Button
                        android:id="@+id/home_animation"
                        style="@style/btn_handler_picker"
                        android:text="@string/animation_mode_default"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <TextView
                    style="@style/switch_desc"
                    android:layout_marginTop="6dp"
                    android:text="@string/animation_mode_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/game_optimization" />

                    <Switch
                        android:id="@+id/game_optimization"
                        style="@style/btn_handler_picker"
                        android:textAlignment="center" />
                </LinearLayout>

                <TextView
                    style="@style/switch_desc"
                    android:layout_marginTop="6dp"
                    android:text="@string/game_optimization_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/root_get_recents" />

                    <Switch
                        android:id="@+id/root_get_recents"
                        style="@style/btn_handler_picker"
                        android:textAlignment="center" />
                </LinearLayout>

                <TextView
                    style="@style/switch_desc"
                    android:layout_marginTop="6dp"
                    android:text="@string/root_get_recents_desc" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/card_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/app_switch_exclusive" />

                        <TextView
                            style="@style/switch_desc"
                            android:layout_marginTop="6dp"
                            android:text="@string/app_switch_exclusive_desc" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/app_switch_exclusive"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:background="@null"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/gesture_disable"
                        android:tint="#aaa" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/other_pressure_config"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/pressure_config"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/switch_desc"
                        android:text="@string/pressure_config_desc" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Switch
                    android:id="@+id/hide_start_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_start_icon"
                    android:textStyle="bold" />

                <TextView
                    style="@style/switch_desc"
                    android:text="@string/hide_start_icon_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>