<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/samsung_options"
        style="@style/card_view"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/samsung_optimize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samsung_optimize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samsung_optimize_desc"
                android:textSize="12dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/samsung_guide"
        style="@style/card_view"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samsung_guide_desc"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shell_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="adb shell pm grant com.omarea.gesture android.permission.WRITE_SECURE_SETTINGS"
                    android:textSize="12dp" />

                <ImageButton
                    android:id="@+id/copy_shell"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:padding="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/gesture_copy" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
