<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/edge_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/simple_gesture"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:text="@string/side_bottom" />

                    <CheckBox
                        android:id="@+id/allow_bottom_landscape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/landscape" />

                    <CheckBox
                        android:id="@+id/allow_bottom_portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/portrait" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="@string/bottom_hot_area_width" />

                    <SeekBar
                        android:id="@+id/bar_width_bottom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="100"
                        android:min="0"
                        android:progress="100" />

                    <Button
                        android:id="@+id/bar_color_bottom"
                        style="@style/btn_color_picker" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="@string/bottom_hot_area_height" />

                    <SeekBar
                        android:id="@+id/edge_bottom_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="30dp"
                        android:max="40" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="向上滑动" />

                    <Button
                        android:id="@+id/tap_bottom"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="上滑悬停" />

                    <Button
                        android:id="@+id/hover_bottom"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:text="@string/side_left" />

                    <CheckBox
                        android:id="@+id/allow_left_landscape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/landscape" />

                    <CheckBox
                        android:id="@+id/allow_left_portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/portrait" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="热区高度" />

                    <SeekBar
                        android:id="@+id/bar_height_left"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="100"
                        android:min="0" />

                    <Button
                        android:id="@+id/bar_color_left"
                        style="@style/btn_color_picker" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="向右滑动" />

                    <Button
                        android:id="@+id/tap_left"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="右滑悬停" />

                    <Button
                        android:id="@+id/hover_left"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/card_title"
                        android:text="@string/side_right" />

                    <CheckBox
                        android:id="@+id/allow_right_landscape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/landscape" />

                    <CheckBox
                        android:id="@+id/allow_right_portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/portrait" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="热区高度" />

                    <SeekBar
                        android:id="@+id/bar_height_right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="100"
                        android:min="0" />

                    <Button
                        android:id="@+id/bar_color_right"
                        style="@style/btn_color_picker" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="向左滑动" />

                    <Button
                        android:id="@+id/tap_right"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="左滑悬停" />

                    <Button
                        android:id="@+id/hover_right"
                        style="@style/btn_handler_picker"
                        android:text="@string/edge_action" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/card_title"
                    android:text="@string/side_hot_area_width" />

                <SeekBar
                    android:id="@+id/edge_side_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:max="40"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_area_desc"
                    android:textColor="#888"
                    android:textSize="11dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>